--- a/howto.qmd
+++ b/howto.qmd
@@ -9,7 +9,7 @@ format:
    linestretch: 1.5
 ---
 
-## ## <i class="bi bi-book"></i>  What are How-To's?
+## <i class="bi bi-book"></i>  What are How-To's?
 
 ::: {style="text-align: justify; font-size: 1.2em; line-stretch: 1.o; font-family: Georgia, serif;"}
 [**The primary goal**]{style="color: goldenrod; font-size: 1.2em; font-family: Verdana, sans-serif;"} 
